--- a/frontend/android/player.html
+++ b/frontend/android/player.html
@@ -584,11 +584,19 @@
     >
     </div>
     <div
-      class="text-white container mt-2 text-center h4 p-2 rounded align-middle"
+      class="text-white container mt-2 text-center h4 p-2 rounded align-middle; "
       id="notification"
-      style="display: none"
+      style="display: none;"
     >
     </div>
+
+    <div
+    class="text-white container mt-2 text-center h4 p-2 rounded align-middle"
+    id="notification2"
+    style="display: none; margin-top: 500px;"
+  >
+  </div>
+
     <div class="text-black container mt-2 text-center h4 p-2 rounded align-middle" id="modal" style="display: none">
       <div id="modal_content"></div>
       <span class="menuitem_epg btn btn-outline-dark btn-small mt-1 p-1">
