--- a/frontend/android/player.html
+++ b/frontend/android/player.html
@@ -13,15 +13,15 @@
     <link href="styles/bootstrap-4.3.1.css" rel="stylesheet" />
 
     <!-- iOS meta tags and icons -->
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="#0098f4" />
-    <meta name="apple-mobile-web-app-title" content="DVB-I" />
-    <link rel="apple-touch-icon" href="apple-touch-icon.png" />
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="#0098f4">
+    <meta name="apple-mobile-web-app-title" content="DVB-I">
+    <link rel="apple-touch-icon" href="icons-128.png">
 
-    <link rel="stylesheet" type="text/css" href="styles/dvbi.css?v=1" />
+    <link rel="stylesheet" type="text/css" href="styles/dvbi.css?v=1">
     <link rel="icon" href="images/icons-512.png" type="image/x-icon" />
-    <link rel="manifest" href="./manifest.json" />
-
+    <link rel="manifest" href="./manifest.json">
+    <script src="hls/hls.min.js"></script>
     <script src="https://cdn.dashjs.org/latest/dash.all.min.js"></script>
     <script src="../../identifiers.js"></script>
     <script src="../../namespaces.js"></script>
@@ -39,6 +39,7 @@
     <script src="../dvbi-common.js"></script>
     <script src="../localstorage.js"></script>
     <script src="../i18n/i18n.js"></script>
+
 
 
 
