--- a/frontend/android/player.html
+++ b/frontend/android/player.html
@@ -67,6 +67,10 @@
           <span class="menuitem_epg btn btn-outline-dark btn-small mt-1 p-1" onclick="toggleSettings()">
             <span class="text-white settings_button">Settings</span>
           </span>
+          <span class="menuitem_protocol btn btn-outline-dark btn-small mt-1 p-1" onclick="showProtocol()">
+            <span class="text-white protocol_button">Show Protocol</span>
+          </span>
+
           <span style="display:none" id="pause" class="menuitem_epg btn btn-outline-dark btn-small mt-1 p-1"><a href="javascript:togglePause()" class="text-white pause_button">Pause</a></span>
           <span style="display:none" id="play" class="menuitem_epg btn btn-outline-dark btn-small mt-1 p-1"><a href="javascript:togglePause()" class="text-white play_button">Play</a></span>
           <span style="display:none" id="subtitle" class="menuitem_epg btn btn-outline-dark btn-small mt-1 p-1"><a href="javascript:showSubtitles()" class="text-white subtitle_button">Subtitles</a></span>
